# db3

./: .gitignore  .gitmodules  404.html  BUILD.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  README_zh_cn.md  build.rs  format.sh  index.html  install_env.sh  mkdocs.yml  package.json  sitemap.xml  tea.yaml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml  db3js.yml  docker_cd.yml  docker_release_cd.yml  labeler.yaml  pages.yml  pr_labeler.yml  rust-clippy.yml  (+3 more)
abi/: DB3MetaStore.json  Events.json
benches/: cell_store_bench.rs  linked_list_bench.rs  row_codec_bench.rs
bridge/: README.md  deploy_to_local.sh  format.sh  hardhat.config.ts  package.json
chains/: eth_openrpc.json
docker/: Dockerfile  ar_miner.sh  config.ts  start_all.sh  start_localnet.sh
docs/: Gemfile  GetStarted.markdown  _config.yml  account_model.md  architecture.md  background.md  index.markdown  index.md  json_rpc.md  mutation.md  white_paper.md
frame/db/: Cargo.toml
frame/db/rpc/: Cargo.toml
frame/db/rpc/runtime-api/: Cargo.toml
frame/db/rpc/runtime-api/src/: lib.rs
frame/db/rpc/src/: lib.rs
frame/db/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
index_oldx/: index.html
java/: README.md  pom.xml
kvstore/: Cargo.toml  Readme.md
kvstore/src/: lib.rs  main.rs
kvstore/tests/: kvstore_app.rs
metadata/: .prettierrc.json  README.md  deploy_mumbai.sh  deploy_scroll.sh  deploy_to_local.sh  hardhat.config.ts  package.json  start_hardhat_node.sh  start_localnet.sh
onebox/: start_all.sh
primitives/: Cargo.toml
primitives/src/: lib.rs
proto/: db3_base.proto  db3_compute_node.proto  db3_memory_node.proto  db3_memroy_node.proto  db3_meta_node.proto  rtstore_base.proto  rtstore_compute_node.proto  rtstore_memory_node.proto  rtstore_meta_node.proto  rtstore_meta_server.proto
python/: test_mysql.py  test_sqlclient.py
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
sdk/: .prettierrc  Makefile  README.md  babel.config.json  format.sh  jest.config.ts  jest.setup.ts  package.json  tsconfig.json
search/: search_index.json
src/: lib.rs
src/api/: Cargo.toml
src/api/src/: convention.rs  main.rs
src/app/: Cargo.toml
src/app/src/: lib.rs  main.rs
src/app/tests/: kvstore_app.rs
src/base/: Cargo.toml  arrow_parquet_utils.rs  linked_list.rs  mod.rs  mysql_utils.rs  slice.rs  strings.rs  test_base.rs  time_utils.rs
src/base/filesystem/: mod.rs  posix_file_system.rs  reader.rs  writer.rs
src/base/log/: mod.rs  reader.rs  writer.rs
src/base/src/: bson_util.rs  db3_document.rs  get_address.rs  lib.rs  strings.rs  test_base.rs  times.rs
src/bridge/: Cargo.toml
src/bridge/src/: evm_chain_watcher.rs  lib.rs  main.rs  storage_chain_minter.rs
src/cmd/: Cargo.toml  db3.rs  rtstore.rs
src/cmd/src/: command.rs  console.rs  deposit.rs  keystore.rs  lib.rs  shell.rs  show_evm_account.rs
src/crypto/: Cargo.toml
src/crypto/src/: account_id.rs  address.rs  db3_address.rs  db3_document.rs  db3_keypair.rs  db3_public_key.rs  db3_serde.rs  db3_signature.rs  db3_signer.rs  db3_verifier.rs  id.rs  id_v2.rs  key_derive.rs  keypair.rs  lib.rs  sign.rs  signature_schema.rs  signature_scheme.rs  signer.rs  signing.rs  verifier.rs
src/error/: Cargo.toml  mod.rs
src/error/src/: lib.rs
src/event/: Cargo.toml
src/event/src/: event_processor.rs  lib.rs  meta_store_event_processor.rs
src/faucet/: Cargo.toml
src/faucet/src/: faucet_node_impl.rs  fund_faucet.rs  lib.rs
src/kvstore/: Cargo.toml  Readme.md
src/kvstore/src/: lib.rs
src/kvstore/tests/: kvstore_app.rs
src/node/: Cargo.toml  build.rs
src/node/src/: abci_impl.rs  ar_toolbox.rs  auth_storage.rs  command.rs  context.rs  hash_util.rs  indexer_impl.rs  json_rpc.rs  json_rpc_impl.rs  lib.rs  main.rs  mutation_utils.rs  node_config.rs  node_context.rs  node_key.rs  node_storage.rs  node_test_base.rs  recover.rs  rollup_executor.rs  storage_node_impl.rs  storage_node_light_impl.rs  storage_shard_node.rs  system_impl.rs  version_util.rs
src/node/tests/: command_test.rs  json_rpc_test.rs  kvstore_app.rs  node_test.rs
src/proto/: Cargo.toml  build.rs  mod.rs
src/proto/proto/: db3_account.proto  db3_account_v2.proto  db3_base.proto  db3_bill.proto  db3_database.proto  db3_database_v2.proto  db3_event.proto  db3_faucet.proto  db3_indexer.proto  db3_message.proto  db3_mutation.proto  db3_mutation_v2.proto  db3_namespace.proto  db3_node.proto  db3_rollup.proto  db3_session.proto  db3_storage.proto  db3_system.proto  protos.json  update.sh
src/proto/src/: lib.rs
src/sdk/: Cargo.toml  compute_node_sdk.rs  memory_node_sdk.rs  meta_etcd_sdk.rs  meta_node_sdk.rs  mod.rs
src/sdk/benches/: my_benchmark.rs  rust_sdk_benchmark.rs  sdk_benchmark.rs  submit_mutation_benchmark.rs
src/sdk/src/: bill_sdk.rs  faucet_sdk.rs  indexer_sdk.rs  lib.rs  mutation_sdk.rs  sdk_test.rs  session_sdk.rs  store_sdk.rs  store_sdk_v2.rs  system_sdk.rs
src/session/: Cargo.toml
src/session/src/: lib.rs  query_session_verifier.rs  session_manager.rs
src/storage/: Cargo.toml  README.md  chunk.rs  mod.rs
src/storage/resources/test/: 37829_37968.gz.parquet
src/storage/src/: account_store.rs  ar_fs.rs  bill_store.rs  collection_key.rs  commit_store.rs  db3_document.rs  db_doc_key_v2.rs  db_key.rs  db_owner_key.rs  db_owner_key_v2.rs  db_store.rs  db_store_v2.rs  doc_key_v2.rs  doc_store.rs  event_key.rs  event_store.rs  faucet_key.rs  faucet_store.rs  key.rs  key_store.rs  kv_store.rs  lib.rs  meta_store_client.rs  mutation_store.rs  ns_key.rs  ns_store.rs  state_store.rs  system_store.rs
src/types/: Cargo.toml
src/types/src/: account.rs  account_key.rs  address.rs  bill.rs  bill_key.rs  coin.rs  cost.rs  gas.rs  gas_meter.rs  lib.rs  token.rs
static/: block.json  vars.txt
storage/: Cargo.toml
storage/src/: lib.rs
tests/: sdk_it_tests.rs
tools/: ar_miner.sh  db3up  db3up_init.sh  gen_proto_js.sh  install_db3.sh  start_localnet.sh  start_localtestnet.sh  wallet.json
white_paper/: index.html
(+221 files in other folders)
