[workspace]
resolver = "1"
members = [
    "src/crypto",
    "src/proto",
    "src/error",
    "src/types",
    "src/base",
    "src/session",
    "src/storage",
    "src/node",
    "src/sdk",
    "src/cmd"
]

[workspace.dependencies]
fastcrypto = {git = "https://github.com/MystenLabs/fastcrypto", rev = "306465d4fe04f6c26359d885f3b0a548b661de40"}
ethers = {git="https://github.com/imotai/ethers-rs", rev="d526191b7972e8cf4412fee8b71cbf42e0ce7995"}
tonic = {git="https://github.com/hyperium/tonic", rev="ae7580160431cd25c1eecda4c85014ef6ce8d93f"}
tonic-web = {git="https://github.com/hyperium/tonic", rev="ae7580160431cd25c1eecda4c85014ef6ce8d93f"}
arweave-rs = {git="https://github.com/imotai/arweave-rs", rev="31d708a98e4d7199593f7554c2e184272b0bb8dd"}
serde_json= "1.0"
