[package]
name = "db3-kvstore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db3-kvstore"
path = "src/main.rs"
required-features = [ "binary"]

[features]
default = []
client = []
echo-app = []
kvstore-app = []
binary = [
    "structopt",
    "tracing-subscriber/fmt",
]

[dependencies]
bytes = { version = "1.0", default-features = false }
tendermint-abci = {version = "0.25.0", git = "https://github.com/dbpunk-labs/tendermint-rs.git", branch = "release/v0.25.0"}
tendermint-proto = {version = "0.25.0", git = "https://github.com/dbpunk-labs/tendermint-rs.git", branch = "release/v0.25.0"}
tracing = { version = "0.1", default-features = false }
flex-error = { version = "0.4.4", default-features = false }
structopt = { version = "0.3", optional = true, default-features = false }
tracing-subscriber = { version = "0.2", optional = true, default-features = false }