[package]
name = "db3-primitives"
version = "0.1.0"
authors = ["dev@db3.network"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../thirdparty/substrate/frame/system" }
sp-application-crypto = { version = "6.0.0", default-features = false, path = "../thirdparty/substrate/primitives/application-crypto" }
sp-core = { version = "6.0.0", default-features = false, path = "../thirdparty/substrate/primitives/core" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../thirdparty/substrate/primitives/runtime" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
