[package]
name = "db3-rpc"
version = "0.1.0"
authors = ["dev@db3.network"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://db3.network"
repository = "https://github.com/db3-team/db3/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.14.0", features = ["server"] }
db3-primitives = { version = "0.1.0", path = "../primitives" }
sqldb-rpc = { version = "0.1.0", path = "../frame/db/rpc/" }
pallet-contracts-rpc = { version = "4.0.0-dev", path = "../thirdparty/substrate/frame/contracts/rpc/" }
pallet-mmr-rpc = { version = "3.0.0", path = "../thirdparty/substrate/frame/merkle-mountain-range/rpc/" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", path = "../thirdparty/substrate/frame/transaction-payment/rpc/" }
sc-chain-spec = { version = "4.0.0-dev", path = "../thirdparty/substrate/client/chain-spec" }
sc-client-api = { version = "4.0.0-dev", path = "../thirdparty/substrate/client/api" }
sc-consensus-babe = { version = "0.10.0-dev", path = "../thirdparty/substrate/client/consensus/babe" }
sc-consensus-babe-rpc = { version = "0.10.0-dev", path = "../thirdparty/substrate/client/consensus/babe/rpc" }
sc-consensus-epochs = { version = "0.10.0-dev", path = "../thirdparty/substrate/client/consensus/epochs" }
sc-finality-grandpa = { version = "0.10.0-dev", path = "../thirdparty/substrate/client/finality-grandpa" }
sc-finality-grandpa-rpc = { version = "0.10.0-dev", path = "../thirdparty/substrate/client/finality-grandpa/rpc" }
sc-rpc = { version = "4.0.0-dev", path = "../thirdparty/substrate/client/rpc" }
sc-rpc-api = { version = "0.10.0-dev", path = "../thirdparty/substrate/client/rpc-api" }
sc-sync-state-rpc = { version = "0.10.0-dev", path = "../thirdparty/substrate/client/sync-state-rpc" }
sc-transaction-pool-api = { version = "4.0.0-dev", path = "../thirdparty/substrate/client/transaction-pool/api" }
sp-api = { version = "4.0.0-dev", path = "../thirdparty/substrate/primitives/api" }
sp-block-builder = { version = "4.0.0-dev", path = "../thirdparty/substrate/primitives/block-builder" }
sp-blockchain = { version = "4.0.0-dev", path = "../thirdparty/substrate/primitives/blockchain" }
sp-consensus = { version = "0.10.0-dev", path = "../thirdparty/substrate/primitives/consensus/common" }
sp-consensus-babe = { version = "0.10.0-dev", path = "../thirdparty/substrate/primitives/consensus/babe" }
sp-keystore = { version = "0.12.0", path = "../thirdparty/substrate/primitives/keystore" }
sp-runtime = { version = "6.0.0", path = "../thirdparty/substrate/primitives/runtime" }
substrate-frame-rpc-system = { version = "4.0.0-dev", path = "../thirdparty/substrate/utils/frame/rpc/system" }
substrate-state-trie-migration-rpc = { version = "4.0.0-dev", path = "../thirdparty/substrate/utils/frame/rpc/state-trie-migration-rpc/" }
