[package]
name = "db3-storage"
version = "0.1.0"
edition = "2021"


[dependencies]
duckdb = {version = "0.4.0", features= ["modern-full"]}
actix-web = "4.1.0"
arrow = "16.0.0"
env_logger = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
log = "0.4"
r2d2 = "0.8"
r2d2_sqlite = "0.20"
rusqlite = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty_env_logger = "0.4.0"
