[package]
name = "pallet-sql-db"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = '1.0.100', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.45', default-features = false, features = ['alloc'] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hex-literal = { version = "0.3.4", optional = true }
hex = { version = "0.4", default-features = false, features=['alloc'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../../thirdparty/substrate/frame/benchmarking" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../../thirdparty/substrate/frame/support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../../thirdparty/substrate/frame/system" }
pallet-balances = { version = "4.0.0-dev", default-features = false, path = "../../thirdparty/substrate/frame/balances" }
sp-inherents = { version = "4.0.0-dev", default-features = false, path = "../../thirdparty/substrate/primitives/inherents" }
sp-io = { version = "6.0.0", default-features = false, path = "../../thirdparty/substrate/primitives/io" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../thirdparty/substrate/primitives/runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../../thirdparty/substrate/primitives/std" }
sp-transaction-storage-proof = { version = "4.0.0-dev", default-features = false, path = "../../thirdparty/substrate/primitives/transaction-storage-proof" }
log = { version = "0.4.17", default-features = false }
sp-core = { version = "6.0.0", default-features = false, path = "../../thirdparty/substrate/primitives/core" }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "hex-literal"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"scale-info/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
    "sp-std/std",
	"sp-transaction-storage-proof/std",
    "sp-core/std",
    "hex/std"
]
