[package]
name = "db3-api"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "api module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]

[[bin]]
name = "db3-apiserver"
path = "src/main.rs"
[dependencies]
bytes = { version = "1.0", default-features = false }
futures-util = "0.3.25"
env_logger = "0.9.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
db3-proto={ path ="../proto" }
db3-error={ path = "../error" }
db3-base={ path = "../base" }
db3-sdk={ path = "../sdk" }
actix-web = "4.1.0"
tonic = "0.7.2"
