[package]
name = "db3-kvstore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db3"
path = "src/main.rs"
[features]
default = []
client = []
echo-app = []
kvstore-app = []

[dependencies]
bytes = { version = "1.0", default-features = false }
tendermint-abci = {version = "0.25.0", git = "https://github.com/dbpunk-labs/tendermint-rs.git", branch = "release/v0.25.0"}
tendermint-proto = {version = "0.25.0", git = "https://github.com/dbpunk-labs/tendermint-rs.git", branch = "release/v0.25.0"}
flex-error = { version = "0.4.4", default-features = false }
structopt = { version = "0.3" }
db3-proto={path="../proto", version="0.1.0"}
db3-crypto={path="../crypto", version="0.1.0"}
db3-storage={path="../storage", version="0.1.0"}
db3-types={path="../types", version="0.1.0"}
prost = "0.10"
prost-types = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
fastcrypto="0.1.3"
signature = { version = "1.6.4", features = ["rand-preview"] }
hex = "0.4.3"
rand = "0.8.5"
rust_secp256k1 = { version = "0.24.0", package = "secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }
merk = {version= "2.0.0", path = "../../thirdparty/merk"}
ethereum-types = { version = "0.13.1", default-features = false }
tempdir = "0.3.7"
