[package]
name = "db3-base"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "base module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]

[dependencies]
ethereum-types = { version = "0.14.0", default-features = false }
hex = "0.4.3"
rust_secp256k1 = { version = "0.24.0", package = "secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }
fastcrypto="0.1.3"
db3-proto={path="../proto", version="0.1.0"}
ed25519-dalek = "1.0.1"
rand = "0.8.5"
serde_json = "1.0.88"
bson = "2.5.0"
db3-error = {path = "../error" }
[dev-dependencies]
db3-crypto = {path = "../crypto"}