[package]
name = "db3-base"
version = "0.4.2"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "base module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]

[dependencies]
ethereum-types = { version = "0.14.0", default-features = false }
hex = "0.4.3"
fastcrypto="0.1.3"
db3-proto={path="../proto"}
db3-error={path="../error"}
rand = "0.8.5"
bson = "2.5.0"
serde_json = {workspace=true}
byteorder = "1.4.3"
ethers = { workspace = true }
[dev-dependencies]
chrono = "0.4.22"
