[package]
name = "db3-bridge"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "bridge module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "1.0.0", features = ["ws"] }
eyre = "0.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.18", features = ["macros"] }
redb = "0.13.0"
db3-proto={ path ="../proto" }
db3-error={ path = "../error" }
db3-storage={ path = "../storage" }
tracing = "0.1"

[[bin]]
name = "db3-bridge"
path = "src/main.rs"

[[bin]]
name = "db3-call"
path = "src/call_contract.rs"
