[package]
name = "db3-bridge"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "bridge module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {workspace=true, features=["ws"]}
eyre = "0.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.18", features = ["macros"] }
redb = "0.13.0"
db3-proto={ path ="../proto" }

db3-error={ path = "../error" }
db3-storage={ path = "../storage" }
db3-crypto={ path = "../crypto" }
db3-sdk={ path = "../sdk" }

hex = "0.4.3"
tracing = "0.1"
generic-array = { version = "0.14.6", default-features = false }
k256 = { version = "0.11", default-features = false, features = ["keccak256", "ecdsa", "std"] }
elliptic-curve = { version = "0.12.3", default-features = false }
