[package]
name = "db3-cmd"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "cmd module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]


[dependencies]
db3-error={ path = "../error" }
db3-base={ path = "../base" }
db3-sdk={ path = "../sdk" }
db3-proto={ path = "../proto" }
db3-crypto={ path = "../crypto" }
db3-session={ path = "../session" }
ethereum-types = { version = "0.14.0", default-features = false }
prost = "0.11"
prost-types = "0.11"
prettytable-rs = "^0.10"
ed25519-dalek = "2.0.0-rc.2"
rand = "0.7"
rand_core = "0.6"
dirs = "5.0.0"
bip32 = "0.5.0"
rustyline = "9.1.2"
rustyline-derive = "0.8.0"
colored = "2.0.0"
unescape = "0.1.0"
shell-words = "1.1.0"
clap = { version = "4.0.20", features = ["derive"] }
async-trait = "0.1.64"
anyhow = "1.0.68"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
hex = "0.4.3"
fastcrypto = { workspace = true, features = ["copy_key"] }
ethers = {workspace=true}
tonic = {workspace=true}
http = "0.2"
eyre = "0.6"
[dev-dependencies]
db3-session={ path = "../session"}
db3-crypto={ path = "../crypto"}
tokio = { version = "1.17.0", features = ["full"] }
