[package]
name = "db3-crypto"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "crypto module of db3"
homepage = "https://db3.network"
repository = "https://github.com/dbpunk-labs/db3"
keywords = ["database", "web3", "db3"]

[dependencies]
db3-proto={ path ="../proto" }
db3-error={ path = "../error" }
db3-base={ path = "../base" }
ethereum-types = { version = "0.14.0", default-features = false }
ed25519-dalek = "2.0.0-rc.2"
anyhow = "1.0.68"
prost = "0.11"
prost-types = "0.11"
rand = "0.8.5"
bytes = { version = "1.4.0", features = ["serde"] }
hex = "0.4.3"
base64ct = { version = "1.5.3", features = ["alloc"] }
schemars ="0.8.10"
serde = { version = "1.0.144", features = ["derive"] }
serde-name = "0.2.1"
thiserror = "1.0.34"
bson = "2.5.0"
serde_json = {workspace=true}
serde_with = "2.1.0"
serde_repr = "0.1"
signature = "1.6.0"
eyre = "0.6.8"
enum_dispatch = "^0.3"
derive_more = "0.99.17"
fastcrypto = { workspace = true, features = ["copy_key"] }
slip10_ed25519 = "0.1.3"
byteorder = "1.4.3"
rust_secp256k1 = { version = "0.24.0", package = "secp256k1", features = ["bitcoin_hashes"] }
bip32 = "0.5.0"
ethers = { workspace = true }
chrono = "0.4.22"
storekey = "0.5.0"
enum-primitive-derive = "^0.2"
num-traits = "^0.2"
[dev-dependencies]
tiny-bip39 = "1.0.0"
