[package]
name = "db3-crypto"
version = "0.4.2"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "crypto module of db3"
homepage = "https://db3.network"
repository = "https://github.com/dbpunk-labs/db3"
keywords = ["database", "web3", "db3"]

[dependencies]
db3-proto={ path ="../proto" }
db3-error={ path = "../error" }
db3-base={ path = "../base" }
rand = "0.8.5"
hex = "0.4.3"
base64ct = { version = "1.5.3", features = ["alloc"] }
thiserror = "1.0.34"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = {workspace=true}
serde_with = "3.1.0"
serde_repr = "0.1"
fastcrypto = { workspace = true, features = ["copy_key"] }
ethers = { workspace = true }
byteorder = "1.4.3"
[dev-dependencies]
tiny-bip39 = "1.0.0"
