[package]
name = "db3-event"
version = "0.4.2"
edition = "2021"

[dependencies]
ethers = { workspace = true , features=["ws"]}
tracing = "0.1"
db3-error={path="../error"}
db3-crypto={path="../crypto"}
db3-proto={path="../proto"}
serde_json = { workspace=true}
bytes = "1"
prost = "0.11"
prost-types = "0.12"
db3-storage={path="../storage"}
ethabi = { version = "18.0.0", default-features = false, features = ["full-serde", "rlp"] }
hex = "0.4.3"
tokio = { version = "1.17.0", features = ["full"] }
arc-swap = "1.6.0"
