[package]
name = "db3-faucet"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "bridge module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = {workspace=true, features=['ws']}
eyre = "0.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.18", features = ["macros"] }
redb = "0.14.0"
db3-proto={ path ="../proto" }
db3-error={ path = "../error" }
db3-storage={ path = "../storage" }
db3-crypto={ path = "../crypto" }
db3-sdk={ path = "../sdk" }
tracing = "0.1"
tonic = "0.9.1"
hex = "0.4.3"
