[package]
name = "db3-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db3"
path = "src/main.rs"

[dependencies]
bytes = { version = "1.4", default-features = false }
tendermint-abci = "0.31.1"
tendermint-proto = "0.31.1"
tendermint-rpc = {version = "0.31.1",  features=["http-client", "websocket-client"]}
tendermint-config = "0.31.1"
tendermint = "0.31.1"
flex-error = { version = "0.4.4", default-features = false }
db3-proto={path="../proto", version="0.1.0"}
db3-crypto={path="../crypto", version="0.1.0"}
db3-storage={path="../storage", version="0.1.0"}
db3-types={path="../types", version="0.1.0"}
db3-base={path="../base", version="0.1.0"}
db3-error={path="../error", version="0.1.0"}
db3-cmd={path="../cmd", version="0.1.0"}
db3-sdk={path="../sdk", version="0.1.0"}
db3-session={path="../session", version="0.1.0"}
ethers = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
fastcrypto = { workspace = true, features = ["copy_key"] }
signature = { version = "2"}
hex = "0.4.3"
rand = "0.8.5"
rust_secp256k1 = { version = "0.24.0", package = "secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }
merkdb = {version= "2.0.0", path = "../../thirdparty/merkdb"}
ethereum-types = { version = "0.14.0", default-features = false }
tempdir = "0.3.7"
serde_json = { workspace=true}
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.12"
clap = { version = "4.0.20", features = ["derive"] }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview"] }
http = "0.2"
shadow-rs = "0.21.0"
tower-http = { version = "0.4", features = ["cors"] }
ctrlc = { version = "3.0", features = ["termination"] }
ed25519-dalek = "2.0.0-rc.2"
dirs = "5.0.0"
redb = "0.21.0"
chrono = "0.4.22"
arrow = "41.0.0"
parquet = {version="41.0.0", features=["arrow", "lz4", "flate2"], default-features = false}
arweave-rs = {workspace=true}
url = "2.4.0"
[build-dependencies]
shadow-rs = "0.21.0"
