[package]
name = "db3-proto"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "proto module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3","db3"]

[dependencies]
tonic = "0.7.2"
prost = "0.10"
prost-types = "0.10"

[build-dependencies]
tonic-build = "0.7.2"
