[package]
name = "db3-proto"
version = "0.4.2"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "proto module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3","db3"]

[dependencies]
prost = "0.11"
prost-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = {workspace=true}
tonic = {workspace=true}
[build-dependencies]
tonic-build = "0.9.2"
