[package]
name = "db3-sdk"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "sdk module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]

[dependencies]
db3-proto={path="../proto", version="0.1.0"}
db3-error={path="../error", version="0.1.0"}
db3-crypto={path="../crypto", version="0.1.0"}
db3-session={path="../session", version="0.1.0"}
bytes = { version = "1.0", default-features = false }
merkdb = {version= "2.0.0", path = "../../thirdparty/merkdb"}
tokio = { version = "1.17.0", features = ["full"] }
tonic = { version = "0.8.3", features = ["tls-roots"]}
tonic-web = "0.5.0"
prost = "0.11"
prost-types = "0.11"
tendermint = "0.27.0"
ethereum-types = { version = "0.14.0", default-features = false }
subtle-encoding = { version = "0.5", default-features = false, features = ["bech32-preview"] }

[dev-dependencies]
rand = "0.8.5"
db3-base={path="../base", version="0.1.0"}
db3-cmd={path="../cmd", version="0.1.0"}

