[package]
name = "db3-session"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "crypto module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]

[dependencies]
db3-proto={ path ="../proto" }
ethereum-types = { version = "0.14.0", default-features = false }
chrono = "0.4.22"

[dev-dependencies]
fastcrypto="0.1.3"
db3-base={ path ="../base" }
bytes = "1"
hex = "0.4.3"
