[package]
name = "db3-session"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "crypto module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]

[dependencies]
db3-proto={ path ="../proto" }
db3-crypto={ path ="../crypto" }
db3-error={ path ="../error" }
ethereum-types = { version = "0.14.0", default-features = false }
chrono = "0.4.22"
prost = "0.11"
prost-types = "0.11"
enum-primitive-derive = "^0.2"
num-traits = "^0.2"
bytes = "1.0"
serde_json = {workspace=true}
ethers = {workspace=true}
[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[dev-dependencies]
fastcrypto = { workspace = true, features = ["copy_key"] }
db3-base={ path ="../base" }
bytes = "1"
hex = "0.4.3"
