[package]
name = "db3-storage"
version = "0.1.0"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "storage module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]
[dependencies]
ethereum-types = { version = "0.14.0", default-features = false }
db3-base={ path = "../base" }
db3-proto={ path ="../proto" }
db3-error={ path = "../error" }
db3-types={ path = "../types" }
merkdb = {version= "2.0.0", path = "../../thirdparty/merkdb"}
hex = "0.4.3"
bytes = "1"
prost = "0.11"
prost-types = "0.11"
tempdir = "0.3.7"
byteorder = "1.4.3"
