[package]
name = "db3-storage"
version = "0.4.2"
edition = "2021"
authors = ["jack wang <jackwang@db3.network>"]
description = "storage module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]
[dependencies]
ethereum-types = { version = "0.14.0", default-features = false }
db3-base={ path = "../base" }
db3-proto={ path ="../proto" }
db3-error={ path = "../error" }
db3-crypto={ path = "../crypto" }
tracing = "0.1"
fastcrypto = { workspace = true, features = ["copy_key"] }
hex = "0.4.3"
bytes = "1"
prost = "0.11"
prost-types = "0.12"
tempdir = "0.3.7"
byteorder = "1.4.3"
serde_json ={workspace=true}
serde = { version = "1.0", features = ["derive"] }
bson = "2.5.0"
itertools = "0.10.5"
ed = "0.3.0"
libmdbx = "0.3.3"
rocksdb = { version = "0.18.0"}
timer = "0.2.0"
arweave-rs = {workspace=true}
url = "2.4.0"
http = "0.2"
moka = "0.11.2"
ejdb2rs = {workspace=true}
ethers = { workspace = true }
rsa = "0.6.1"
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["full"] }
chashmap = "2.2.2"
[features]
ci = []
