[package]
name = "db3-types"
version = "0.1.0"
edition = "2021"
description = "types module of db3"
homepage = "https://db3.network"
repository = "https://github.com/db3-teams/db3"
keywords = ["database", "web3", "db3"]

[dependencies]
db3-proto={ path ="../proto" }
db3-error={ path = "../error" }
db3-crypto={ path = "../crypto" }
db3-base={ path = "../base" }
byteorder = "1.4.3"
anyhow = "1.0.66"
hex = "0.4.3"
ethereum-types = { version = "0.14.0", default-features = false }
fastcrypto="0.1.3"
